[gd_scene load_steps=2 format=3 uid="uid://i43jfeha4be7"]

[ext_resource type="Script" path="res://Scenes/Play/Pause/PauseMenu.gd" id="1_3vb5d"]

[node name="PauseMenu" type="PanelContainer"]
process_mode = 3
self_modulate = Color(1, 1, 1, 0.392157)
top_level = true
z_index = 9
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3vb5d")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 180
theme_override_constants/margin_right = 180

[node name="PauseMenu" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="MarginContainer/PauseMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 192
text = "Pacman"
horizontal_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Resume" type="Button" parent="MarginContainer/PauseMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 64
text = "Resume"

[node name="ExitToMenu" type="Button" parent="MarginContainer/PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 64
text = "Exit to menu"

[node name="ExitGame" type="Button" parent="MarginContainer/PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 64
text = "Exit game"

[node name="Control2" type="Control" parent="MarginContainer/PauseMenu"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="MarginContainer/PauseMenu/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/PauseMenu/ExitToMenu" to="." method="_on_exit_to_menu_pressed"]
[connection signal="pressed" from="MarginContainer/PauseMenu/ExitGame" to="." method="_on_exit_game_pressed"]
